# musicbrainz-android

./: .gitignore  AndroidManifest.xml  README  README.markdown  README.md  Readme.md  build.gradle  build.gradle.kts  clean_code_formatter.xml  default.properties  gradle.properties  keystore.properties  pom.xml  settings.gradle
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: android-lint.yml  android.yml  attach-release.yml  releaseBeta.yml  releaseProd.yml
.tx/: config
api/: pom.xml
app/: .gitattributes  .gitignore  AndroidManifest.xml  build.gradle  build.gradle.kts  default.properties  lint.xml  pom.xml  project.properties
app/assets/: about.html
app/debug/: output.json
deployer/: pom.xml
fastlane/: Appfile  Fastfile
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
instrumentation/: AndroidManifest.xml  pom.xml
ktaglib/: build.gradle
ktaglib/src/main/cpp/: CMakeLists.txt  ktaglib.cpp
res/anim/: linear_interpolator.xml
res/drawable/: btn_artist.xml  home_about.xml  home_barcode.xml  home_donate.xml  home_login.xml  link_button.xml  link_button_default.xml  link_button_pressed.xml  list_divider.xml  minitab.xml  progress.xml  tagbox.xml
res/layout/: activity_about.xml  activity_artist.xml  activity_barcode.xml  activity_collection.xml  activity_donate.xml  activity_home.xml  activity_login.xml  activity_preferences.xml  activity_release.xml  (+12 more)
res/layout-land/: activity_home.xml
res/layout-small/: activity_home.xml
robotium/: AndroidManifest.xml  pom.xml  project.properties
tv/: build.gradle
(+2530 files in other folders)
